test and minor corrections

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -14,6 +14,7 @@ test.mysql.haibadbpassword=haiba
 
 jdbc.haibareplicatableprefix=
 jdbc.minipas_haibareplicatableprefix=
+jdbc.fgrtableprefix=
 
 jdbc.dialect=MySQL
 
